deploy/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-app
  namespace: form-app-qa
spec:
  selector:
    matchLabels:
      app: form-app
  template:
    metadata:
      labels:
        app: form-app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - form-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: form-app
          image: fcavarzare/form-app:b63b7fd3abd3ff108fe724c9c8046312e2635ee1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
