deploy/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: form-app
  namespace: form-app-qa
spec:
  ingressClassName: nginx
  rules:
  - host: form-app-qa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: form-app
            port:
              number: 80
